[package]
name = "receipt-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
gloo = "0.8.0"
js-sys = "0.3.61"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
regex = "1.7.3"
serde_json = "1.0.100"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.61", features = ["FormData", "HtmlFormElement"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
